--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <section id="body">
     <div class="objects"> 
    <h1><a name= "object">Objects</a></h1></div>
-   <img class="objectPhoto" src="/Users/camksergi/Desktop/2-TutorialWebpage/assets/objects.jpeg">
+   <img class="objectPhoto" src="/objects.jpeg">
    <article class= "objectsP">
    <p>An object is an collection of properties. A property is an association between a name(key) and a value. 
     In the example above the name of the object, how we are identifing it, is comics(1). All of the date we are using is contained in the curly brackets(2).
@@ -81,7 +81,7 @@
    
     <div class ="arrays">
         <h1><a name= "array">Array</a></h1>
-        <img src="/Users/camksergi/Desktop/2-TutorialWebpage/assets/array.jpeg">
+        <img src="/array.jpeg">
       <article class = "arrayP">
         <p>
             An array is a single variable that is used to store different elements. 
@@ -95,7 +95,7 @@
     
     <div class ="forLoop">
             <h1><a name= "Loop">For Loop</a></h1>
-            <img src="/Users/camksergi/Desktop/2-TutorialWebpage/assets/forLoop.jpeg">
+            <img src="/forLoop.jpeg">
             <article class = "forLoopP">
            <p>
             A For Loop takes 3 expressions, a variable declaration, an expression to be evaluated before each iteration, and 
